potential fix for inputs on mobile safari

--- a/components/Modules/GridCell/GridCell.module.scss
+++ b/components/Modules/GridCell/GridCell.module.scss
@@ -2,15 +2,14 @@
 
 .cell {
     transition: all .1s ease-out;
+    position: relative;
 }
 
 .cell input {
     border: none;
+    display: block;
     width: 100%;
     height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
     padding: 0;
     background: transparent;
     color: $black;
@@ -28,14 +27,16 @@
 .cell input:focus,
 .cell input:focus-visible,
 .cell input:focus-within {
-    background-color: $black;
-    color: $white;
+    @include media-query(tablet) {
+        background-color: $black;
+        color: $white;
+    }
 }
 
 .cellRect {
     stroke-width: .5;
     stroke: $black;
-    fill: $white;
+    fill: transparent;
 }
 
 .cellRectActive {
@@ -62,5 +63,7 @@
 /* Highligt */
 /* =========================================================================  */
 .cellHighlight .cellText {
-    fill: $white;
+    @include media-query(tablet) {
+        fill: $white;
+    }
 }
